--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 port.kafka=localhost:29092
 rsa.private-key=classpath:certs/private.pem
 rsa.public-key=classpath:certs/public.pem
+
+logging.level.org.springframework.kafka=DEBUG
