--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+#server.port=8082
 spring.datasource.url=jdbc:postgresql://localhost:5432/looment_user
 spring.datasource.password=postgres
 spring.datasource.username=postgres
