--- a/message-service/src/main/resources/application.properties
+++ b/message-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8086
+#server.port=8086
 spring.datasource.url=jdbc:postgresql://localhost:5432/looment_messaging
 spring.datasource.password=postgres
 spring.datasource.username=postgres
@@ -6,3 +6,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
