LOOMENT GATEWAY-SERVICE: Add reset-password filtering

--- a/gateway-service/src/main/resources/application.properties
+++ b/gateway-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 port.auth=http://localhost:8081/
 port.user=http://localhost:8082/
 port.post=http://localhost:8083/
-port.image=http://localhost:8084/
+port.upload=http://localhost:8084/
 port.messaging=http://localhost:8085/
