--- a/message-service/src/main/resources/application.properties
+++ b/message-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8086
+server.port=8085
 spring.datasource.url=jdbc:postgresql://localhost:5432/looment_messaging
 spring.datasource.password=postgres
 spring.datasource.username=postgres
