--- a/auth-service/pom.xml
+++ b/auth-service/pom.xml
@@ -105,6 +105,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.looment</groupId>
+            <artifactId>looment-entity</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
