--- a/auth-service/src/main/resources/application.properties
+++ b/auth-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8081
+server.port=8081
 spring.datasource.url=jdbc:postgresql://localhost:5432/looment_user
 spring.datasource.password=postgres
 spring.datasource.username=postgres
