--- a/upload-service/src/main/resources/application.properties
+++ b/upload-service/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#server.port=8084
+server.port=8084
 spring.datasource.url=jdbc:postgresql://localhost:5432/looment_upload
 spring.datasource.password=postgres
 spring.datasource.username=postgres
@@ -6,3 +6,10 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
+
+firebase.credentials.path=classpath:looment-upload-firebase-adminsdk-8zsqh-a55225b848.json
+firebase.storage.bucket=looment-upload.appspot.com
+
+aws.accessKey=AKIAT7KCBYETPZBMG7MC
+aws.secretKey=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
+aws.s3.bucketname=looment-upload
