--- a/upload-service/src/main/resources/application.properties
+++ b/upload-service/src/main/resources/application.properties
@@ -10,6 +10,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL9Dialect
 firebase.credentials.path=classpath:looment-upload-firebase-adminsdk-8zsqh-a55225b848.json
 firebase.storage.bucket=looment-upload.appspot.com
 
-aws.accessKey=AKIAT7KCBYETPZBMG7MC
-aws.secretKey=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
-aws.s3.bucketname=looment-upload
+aws.accessKey=
+aws.secretKey=
+aws.s3.bucketname=
